Added pages and dropdown

--- a/app/views/pages/accounting.html.erb
+++ b/app/views/pages/accounting.html.erb
@@ -4,6 +4,51 @@
 
 <p>FIRST YEAR<p/>
 <p>FIRST SEMESTER HOURS<p/>
+<table class="table table-striped table-hover ">
+  <thead>
+    <tr>
+      <th>Class</th>
+      <th>Hours</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>ENGL- 002 Freshman Composition</td>
+      <td>3</td>
+      <td>ENGL-003 Freshman Composition 3</td>
+      <td>3</td>
+    </tr>
+    <tr>
+      <td>MATH-010 College Algebra II </td>
+      <td>4</td>
+      <td>MATH-026 Applied Calculus </td>
+      <td>4</td>
+    </tr>
+      <td>Foreign Language</td>
+      <td>3</td>
+      <td>>Foreign Language (Level 2+)</td>
+      <td>3</td>
+    </tr>
+      <td>Afro- American Elective</td>
+      <td>3</td>
+      <td>>History or Political Science Elective</td>
+       <td>3</td>
+    </tr>
+      <td>INFO-010 Business Problem Solving</td>
+      <td>2</td>
+        <td>PSYC-050 Intro to Psychology</td>
+        <td>3</td>
+    </tr>
+      <td>Business Orientation</td>
+      <td>1</td>
+     <td>MGMT-011 Business Orientation II</td>
+    </tr>
+      <td>Toal</td>
+      <td>16</td>
+    </tr>
+  </tbody>
+</table> 
+
 <p>ENGL- 002 Freshman Composition 3<p/>
 <p>MATH-010 College Algebra II 3<p/>
  <p>Foreign Language 3<p/>
