--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,7 @@
-<h1>HU SOB REP</h1>
-<p>This is the future</p>
+<center>
+    <div class="jumbotron">
+  <h1>SOB SUCCESS</h1>
+  <p>The major key to unlock an A! </p>
+  <p><a class="btn btn-primary btn-lg">Login</a></p>
+</div>
+</center>
