--- a/app/views/pages/majors.html.erb
+++ b/app/views/pages/majors.html.erb
@@ -1,7 +1,6 @@
 <h1> Majors </h1>
-<p1>
-  <p>School of Business Undergraduate Programs</p>
-<p>Accounting</p>
+<h2>School of Business Undergraduate Programs</h2>
+<p> <%= link_to "Accounting", accounting_path %></p> 
 <p>Computer Information Systems</p>
 <p>Finance</p>
 <p>Finance: Risk Management & Insurance and Actuarial Science</p>
